# SOCs_Drivers

./: README.md
ATmega_32/: README.md
ATmega_32/ATmega_32/: CMakeLists.txt
ATmega_32/ATmega_32/.cache/clangd/index/: ADC_Config.h.2C1BF21AB99B8E99.idx  ADC_Interface.h.64CDC85B5A7175C3.idx  ADC_Private.h.F2DC97054C34B737.idx  ADC_Program.c.6C3718FCEBDDD36D.idx  Application.c.014A63DFE51298CD.idx  Application.c.412ED8DBE2CF1DD4.idx  Application.c.8119EE6D454A29AB.idx  Application.cpp.A81F27228ED5D02E.idx  Application.h.F3DCF255D92EC25F.idx  DC_Motor_Config.h.06CE3709D32DCA75.idx  DC_Motor_Interface.h.9F4A0B55AC8CFD4C.idx  DC_Motor_Program.c.5148B6715CCB7D49.idx  DIO_Interface.h.27EBD725513928BE.idx  DIO_Interface.h.A0A8EEC4A1120D93.idx  DIO_Interface.h.C3145C8495434178.idx  DIO_Private.h.AABE92F9ED573327.idx  DIO_Private.h.B8816EA502380106.idx  DIO_Private.h.F05CDCA6E4312467.idx  DIO_Program.c.73ED2C3D18C58F7A.idx  DIO_Program.c.B4C392F0887003C3.idx  DIO_Program.c.D84A8647E272F8B6.idx  EXTI_Interface.h.DA820C34A41048B8.idx  EXTI_Private.h.36D518A06B979AA3.idx  EXTI_Program.c.74C055661F26BD0F.idx  GPIO.cpp.11CF81922EEA6A8E.idx  GPIO.hpp.1F7E9A8FCCF4CC46.idx  GPIO_Private.hpp.FBE2F32FD34BFE6F.idx  Keypad_Config.h.041E36B451CDBCAD.idx  Keypad_Interface.h.330562841DD9CAE1.idx  Keypad_Private.h.D867B72A7D8E61ED.idx  Keypad_Program.c.AF3F9BEB402F96A4.idx  LCD_Config.h.79178C5D4EA19BA9.idx  LCD_Interface.h.11E501C1E6E2CF1A.idx  LCD_Private.h.EAD9629F3F14D669.idx  LCD_Program.c.3227E63182B2E918.idx  Macros.h.99AB1B037A9D09FF.idx  Macros.h.B7CFF02214EC58BA.idx  Macros.h.C1A6E67A20D2D274.idx  SPI_Config.h.0B6FF05FB89B4DDF.idx  SPI_Interface.h.916A566E0270E73D.idx  (+24 more)
ATmega_32/ATmega_32/Include/: Macros.hpp  Standard_Types.hpp
ATmega_32/ATmega_32/Include/Application/: Application.h
ATmega_32/ATmega_32/Include/MCAL/GPIO/: GPIO.hpp  GPIO_Private.hpp
ATmega_32/ATmega_32/Source/Application/: Application.cpp
ATmega_32/ATmega_32/Source/MCAL/GPIO/: GPIO.cpp
ATmega_32/COTS/: AMITKIT.pdsprj  AMITKIT.pdsprj.T0TI20.t0ti2.workspace  ATMEGA32.pdsprj  Makefile
ATmega_32/COTS/Application/: Application.c  Application.h
ATmega_32/COTS/Debug/: Application.elf  Application.hex
ATmega_32/COTS/Project Backups/: AMITKIT [20230729, 19-40-40].pdsprj  AMITKIT [Autosaved].pdsprj  ATMEGA32 [20230730, 11-22-49].pdsprj  ATMEGA32 [20230802, 08-49-50].pdsprj  ATMEGA32 [20230805, 12-47-01].pdsprj  ATMEGA32 [20230812, 11-56-37].pdsprj
ATmega_32/Simulation/: AMITKIT.pdsprj.KHALED-LAPTOP.t0ti20.workspace  ATMEGA32.pdsprj.T0TI20.t0ti2.workspace
ATmega_32/Simulation/Project Backups/: AMITKIT [20230729, 11-20-24].pdsprj  AMITKIT [Autosaved].pdsprj  ATMEGA32 [20230730, 11-10-54].pdsprj  ATMEGA32 [20230805, 11-59-59].pdsprj  ATMEGA32 [20230805, 13-55-34].pdsprj  ATMEGA32 [20230811, 16-00-08].pdsprj  ATMEGA32 [20230812, 13-35-55].pdsprj  ATMEGA32 [20230830, 19-01-12].pdsprj  ATMEGA32 [Autosaved].pdsprj
STM32F103/STM32F103C8/: CMakeLists.txt  Makefile
STM32F103/STM32F103C8/Application/: Application.c
STM32F103/Simulation/: Simulation.uvguix.t0ti2  Simulation.uvguix.t0ti20  Simulation.uvoptx  Simulation.uvprojx
STM32F401/: README.md
STM32F401/Projects/GPIO Blink/: .cproject  stm32f4_flash.ld
STM32F401/Simulation/: New Project.pdsprj.T0TI20.t0ti2.workspace  Simulation.pdsprj  Simulation.pdsprj.T0TI20.t0ti2.workspace
STM32F401/Simulation/Project Backups/: New Project [20220906, 16-02-41].pdsprj  New Project [Autosaved].pdsprj  Simulation [20220910, 17-44-36].pdsprj  Simulation [Autosaved].pdsprj
TM4C123/: README.md
TM4C123/COTS/APP/: Main.c  Main.h
TM4C123/Simulation/: Simulation.pdsprj  Simulation.pdsprj.T0TI20.t0ti2.workspace
TM4C123/Simulation/Project Backups/: New Project [20220907, 19-31-52].pdsprj
Versatilepb/: Application.c  Application.elf  Commands.txt  Linker_Script.ld  Sections.map  Startup.s  UART.c  UART.h
XMC1100/: README.md
XMC1100/Autosar/: Application.c  GPIO_Interface.h  GPIO_Program.c  README.md
XMC1100/COTS/: Makefile
(+207 files in other folders)
